--- a/style.css
+++ b/style.css
@@ -1,86 +1,18 @@
 .main {
-  width: 400px;
-  height: 400px;
-  background:linear-gradient(to right top, #43389F ,#4ec6ca);
-  box-shadow: 1px 2px 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -200px;
-  margin-left: -200px;
-  border-radius: 3px;
-}
-
-.container {
-  position: absolute;
-  font-family:'Courier New', Courier, monospace ;
-  top: 50%;
-  left: 50%;
-  transform:translate(-50%,-50%) ;
-}
-.numbers {
-  position: relative;
-  width: 200px;
-  height: 100px;
-}
-.one-one {
-  left: -27px;
-  top: 10px;
-  position: absolute;
-  width: 40px;
-  height: 20px;
-  background-color: white;
-  transform: rotate(-40deg);
-  border-radius: 2px;
-  box-shadow: 0 0 13px 0 rgba(0,0,0,0.2);
+    padding: 50px;
+    background-color: rgb(113, 113, 192);
+    max-width: 600px ;
+    height: 300px;
+    margin: 20px auto;
+    box-shadow: 0 0 3px black;
+    border-radius: 3px;
+    
 
 }
 
-.one-two {
-  left: 0;
-  top: 0px;
-  position: absolute;
-  width: 24px;
-  height: 100px;
-  background-color: white;
-  border-radius: 3px;
-  box-shadow: 0 0 13px 0 rgba(0,0,0,0.2);
-  z-index: 3;
-}
+h2 {
+    color: rgb(212, 20, 20);
+    text-align: center;
+    background-color: rgb(52, 50, 50);
 
-.zero-one ,
-.zero-two {
-  box-sizing: border-box;
-  position: absolute;
-  border: 24px solid white;
-  border-radius: 50%;
-  width:100px ;
-  height: 100px;
-  box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.2);
-  left: 15px;
-  z-index: 2;
-}
-
-.zero-two {
-  left: 100px;
-  z-index: 1;
-}
-.big {
-  text-transform: uppercase;
-  line-height: 60px;
-  display: block;
-  font-size: 82px;
-  color: white;
-  font-weight: 700;
-  margin-top: 6px;
-  
-}
-.small {
-  position: relative;
-  font-size: 23px;
-  color: wheat;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 20px;
-  
 }
